# Rezumate-backend

./: .env.example  .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json  rezumate-ai-architecture.html
rezumate-ai/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
rezumate-ai/agents/: graph.py
rezumate-ai/app/: main.py  streamlit_app.py
rezumate-ai/config/: mcp_config.json
rezumate-ai/knowledge_base/: ats_rules.json  power_verbs.json
rezumate-ai/knowledge_base/industry_keywords/: tech.json
rezumate-ai/mcp_servers/ats_scorer/: server.py
rezumate-ai/mcp_servers/keyword_matcher/: server.py
rezumate-ai/mcp_servers/latex_builder/: server.py
rezumate-ai/mcp_servers/resume_parser/: server.py
src/: index.ts
src/agents/: atsScorer.ts  coverLetterAgent.ts  interviewPrepAgent.ts  resumeEditorAgent.ts  resumeTailorAgent.ts  skillsAnalyzer.ts
src/api/: server.ts
src/api/routes/: health.ts  jobs.ts  resume.ts  tailor.ts
src/bot/: index.ts
src/bot/commands/: cancel.ts  help.ts  menu.ts  reset.ts  resume.ts  start.ts
src/bot/handlers/: callbackHandler.ts  documentHandler.ts  messageHandler.ts
src/bot/keyboards/: index.ts
src/database/: db.ts  schema.ts
src/services/: jdService.ts  llmService.ts  pdfService.ts  resumeService.ts
src/state-machine/: machine.ts  states.ts
src/types/: index.ts
src/utils/: atsAlgorithm.ts  formatters.ts  logger.ts  resumeParser.ts  validators.ts
templates/: entry-level-tech.json  mid-level-tech.json  senior-management.json
web/: package-lock.json
web/src/app/: page.tsx  (+3 more)
(+17 files in other folders)
