[project]
name = "rezumate-ai"
version = "1.0.0"
description = "Zero-cost Agentic AI resume optimizer — MCP + LaTeX + Lightweight LLM"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # ── Agentic Orchestration ──
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",

    # ── MCP Server SDK ──
    "mcp>=1.0.0",

    # ── Document Parsing ──
    "PyMuPDF>=1.24.0",          # PDF text extraction
    "python-docx>=1.1.0",       # DOCX text extraction

    # ── Embeddings (local, no API) ──
    "sentence-transformers<3.0.0",
    "transformers<5.0.0",
    "numpy<2.0.0",

    # ── Web Framework ──
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",  # File uploads
    "httpx>=0.27.0",            # Async HTTP client

    # ── Frontend ──
    "streamlit>=1.38.0",

    # ── Utilities ──
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "app*", "mcp_servers*"]

[tool.ruff]
line-length = 120
target-version = "py310"
